--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,39 @@ p, h1 ,h2 ,h3, h4, h5, h6 {
 a{
     text-decoration: none !important;
 }
+
+/* index.html-styling */
+
+.top-bar{
+    background-color: black;
+    padding: 10px 0;
+}
+
+.top-bar .logo{
+    
+}
+
+.top-bar a{
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.top-bar .nav-bar{
+    padding-top: 3px;
+}
+
+.top-bar .nav-bar ul{
+    display: flex;
+    margin-bottom: 0;
+    list-style: none;
+    padding-left: 0;
+    float: right;
+}
+
+.top-bar .nav-bar li a{
+    color: white;
+    font-size: 15px;
+    padding: 0 15px;
+    font-weight: unset;
+}
