--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ a{
 }
 
 /* index.html-styling */
-
 .top-bar{
     background-color: black;
     padding: 10px 0;
@@ -39,6 +38,7 @@ a{
 
 .top-bar .nav-bar{
     padding-top: 3px;
+    float: right;
 }
 
 .top-bar .nav-bar ul{
@@ -46,11 +46,172 @@ a{
     margin-bottom: 0;
     list-style: none;
     padding-left: 0;
-    float: right;
 }
 
 .top-bar .nav-bar li a{
     color: white;
     font-size: 15px;
     padding: 0 15px;
+}
+
+.top-bar .nav-bar li a:hover{
+    transition: 0.5s;
+    opacity: 0.5s;
+    color: #fc6d43;
+}
+
+
+
+/* dropdown buttn */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  
+.parent li>a:hover  .dropdown-content {display: block;}
+
+.sidenav{
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 50px;
+    right: 0;
+    background: linear-gradient(77deg, #f5286e, #fc6d43);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.sidenav.active {
+    width: 100%;
+}
+
+.sidenav ul{
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+      
+.sidenav ul a{
+    padding-left: 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #fff;
+    display: block;
+    transition: 0.3s;
+}
+      
+.sidenav a:hover {
+    color: black;
+}
+
+/* X menu btn */
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 4px;
+    border-radius: 8px;
+    background-color: white;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+  
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+  
+.change .bar2 {opacity: 0;}
+  
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
+}
+
+.toggleMenu {
+    position: absolute;
+    top: 6px;
+    right: 4%;
+    z-index: 1;
+    display: none;
+}
+      
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+
+.mobile-nav{
+    display: none;
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1920px){
+
+}
+
+@media screen and (max-width: 1366px){
+    
+}
+
+@media screen and (max-width: 768px){
+   .toggleMenu {
+        display: block;
+    }
+
+    .mobile-nav
+    {
+        display: block;
+    }
+
+    .top-bar .nav-bar
+    {
+        display: none;
+    }
+
+    .sidenav ul li
+    {
+        padding-top: 15px;
+    }
+
+    .sidenav ul a
+    {
+        font-size: 20px;
+        padding-left: 40px;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .sidenav ul a{
+        padding-left: 16px;
+    }
+}
+
+@media screen and (max-width: 425px){
+    
 }
