--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,73 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
-body
-{
+body {
     font-family: 'Roboto', sans-serif !important;
     overflow-x: hidden;
     margin-bottom: 0 auto;
-    background: #f2f2f2;
-    font-family: 'Open Sans', sans-serif;
+    background: #ffffff;
 }
 
-p, h1 ,h2 ,h3, h4, h5, h6 {
+/* color-classes */
+:root {
+    --white-color: #ffff;
+    --gray-color: #d1d1d1;
+    --darkgray-color: #9e9e9e;
+    --black-color: #0e0e0e;
+}
+
+/* custom-button-css */
+a.orange-btn {
+    border: 1px solid black;
+    border-radius: 30px;
+    padding: 8px 35px;
+    font-size: 15px;
+    color: white;
+    background-color: black;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0 !important;
 }
 
-.all-center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-a{
+a {
     text-decoration: none !important;
 }
 
 /* index.html-styling */
-.top-bar{
+.top-bar {
     background-color: black;
     padding: 10px 0;
 }
 
-.top-bar .logo a{
+.top-bar .logo a {
     color: white;
     font-size: 20px;
     font-weight: 600;
 }
 
-.top-bar .nav-bar{
+.top-bar .nav-bar {
     padding-top: 3px;
     float: right;
 }
 
-.top-bar .nav-bar ul{
+.top-bar .nav-bar ul {
     display: flex;
     margin-bottom: 0;
     list-style: none;
     padding-left: 0;
 }
 
-.top-bar .nav-bar li a{
+.top-bar .nav-bar li a {
     color: white;
     font-size: 15px;
     padding: 0 15px;
 }
 
-.top-bar .nav-bar li a:hover{
+.top-bar .nav-bar li a:hover {
     transition: 0.5s;
     opacity: 0.5s;
     color: #fc6d43;
@@ -66,26 +79,28 @@ a{
     position: relative;
     display: inline-block;
 }
-  
+
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
-  
+
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
-  
-.parent li>a:hover  .dropdown-content {display: block;}
 
-.sidenav{
+.parent li>a:hover .dropdown-content {
+    display: block;
+}
+
+.sidenav {
     height: 100%;
     width: 0;
     position: fixed;
@@ -101,13 +116,13 @@ a{
     width: 100%;
 }
 
-.sidenav ul{
+.sidenav ul {
     list-style: none;
-    padding-left: 0;
+    padding-left: 20px;
     margin-bottom: 0;
 }
-      
-.sidenav ul a{
+
+.sidenav ul a {
     padding-left: 16px;
     text-decoration: none;
     font-size: 25px;
@@ -115,13 +130,15 @@ a{
     display: block;
     transition: 0.3s;
 }
-      
+
 .sidenav a:hover {
     color: black;
 }
 
 /* X menu btn */
-.bar1, .bar2, .bar3 {
+.bar1,
+.bar2,
+.bar3 {
     width: 35px;
     height: 4px;
     border-radius: 8px;
@@ -129,14 +146,16 @@ a{
     margin: 6px 0;
     transition: 0.4s;
 }
-  
+
 .change .bar1 {
     -webkit-transform: rotate(-45deg) translate(-9px, 6px);
     transform: rotate(-45deg) translate(-9px, 6px);
 }
-  
-.change .bar2 {opacity: 0;}
-  
+
+.change .bar2 {
+    opacity: 0;
+}
+
 .change .bar3 {
     -webkit-transform: rotate(45deg) translate(-8px, -8px);
     transform: rotate(45deg) translate(-8px, -8px);
@@ -149,68 +168,77 @@ a{
     z-index: 1;
     display: none;
 }
-      
+
 @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-}
-
-.mobile-nav{
-    display: none;
-} 
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width: 1920px){
-
-}
-
-@media screen and (max-width: 1366px){
-    
-}
-
-@media screen and (max-width: 768px){
-   .toggleMenu {
-        display: block;
-    }
-
-    .mobile-nav
-    {
-        display: block;
-    }
-
-    .top-bar .nav-bar
-    {
-        display: none;
-    }
-
-    .sidenav ul li
-    {
+    .sidenav {
         padding-top: 15px;
     }
 
-    .sidenav ul a
-    {
+    .sidenav a {
+        font-size: 18px;
+    }
+}
+
+.mobile-nav {
+    display: none;
+}
+
+.slider {
+    padding: 40px 0;
+}
+
+.footer {
+    padding: 15px;
+    text-align: center;
+    background-color: black;
+}
+
+.footer p {
+    font-size: 13px;
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1920px) {}
+
+@media screen and (max-width: 1366px) {}
+
+@media screen and (max-width: 768px) {
+    .toggleMenu {
+        display: block;
+    }
+
+    .mobile-nav {
+        display: block;
+    }
+
+    .top-bar .nav-bar {
+        display: none;
+    }
+
+    .sidenav ul {
+        padding-left: 0;
+    }
+
+    .sidenav ul li {
+        padding-top: 15px;
+    }
+
+    .sidenav ul a {
         font-size: 20px;
-        padding-left: 40px;
     }
 }
 
-@media screen and (max-width: 600px){
-    .sidenav ul a{
-        padding-left: 16px;
-    }
-}
+@media screen and (max-width: 600px) {}
 
-@media screen and (max-width: 425px){
-    
-}
+@media screen and (max-width: 425px) {}
